agregar destacados y destacado item

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 :root {
     --bg-color: #eee;
     --main-color: #9CAFA0;
+    --second-color: #AD8888;
     font-family: "Maven Pro", sans-serif;
     font-size: 16px;
 }
