--- a/src/app/components/destacados/destacados.component.html
+++ b/src/app/components/destacados/destacados.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <div class="subtitulo">
         <h3>Productos destacados</h3>
         <app-subrayado></app-subrayado>
