--- a/src/app/components/destacado-item/destacado-item.component.css
+++ b/src/app/components/destacado-item/destacado-item.component.css
@@ -2,7 +2,7 @@
     cursor: pointer;
     border-radius: 15px;
     width: 190px;
-    margin: 50px 0;
+    margin-top: 50px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
 }
 
