--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-header></app-header>
     <div class="main">
+        <app-carousel></app-carousel>
         <app-beneficios></app-beneficios>
         <app-destacados></app-destacados>
     </div>
