--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -38,7 +38,8 @@ li {
     border-bottom: 10px solid transparent;
 }
 
-li:hover {
+li:hover,
+li.selected {
     border-bottom: 10px solid var(--main-color);
     transition: border-bottom 0.3s ease;
 }
@@ -61,9 +62,9 @@ li:hover {
     background-color: #000;
     font-size: 0.9rem;
     padding: 3px 6px;
-    position: absolute;
-    right: 10%;
-    top: 2%;
+    position: relative;
+    right: 8%;
+    top: -10px;
 }
 
 .precio {
