--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,8 @@
         <li 
             *ngFor="let opcion of opciones"
             [ngClass]="{'selected': opcion == navOpcion}"   
-            (click)="cambiarOpcion(opcion)" 
+            (click)="cambiarOpcion(opcion)"
+            routerLink="{{opcion}}"
         >{{opcion}}</li>
     </ul>
     <div class="iconos">
