agregar almohadones a productos,a modo de prueba

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,10 +5,10 @@
     </div>
     <ul>
         <li 
-            *ngFor="let opcion of opciones"
-            [ngClass]="{'selected': opcion == navOpcion}"   
+            *ngFor="let opcion of opciones"   
             (click)="cambiarOpcion(opcion)"
             routerLink="{{opcion}}"
+            [routerLinkActive]="'selected'"
         >{{opcion}}</li>
     </ul>
     <div class="iconos">
