--- a/src/app/modules/inicio/components/carousel/carousel.component.css
+++ b/src/app/modules/inicio/components/carousel/carousel.component.css
@@ -1,5 +1,5 @@
 div {
-    background-image: url(../../../assets/iconos/main.png);
+    background-image: url(../../../../../assets/iconos/main.png);
     height: 386px;
     border-radius: 15px;
     display: flex;
