--- a/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
+++ b/src/app/modules/inicio/components/destacado-item/destacado-item.component.css
@@ -18,7 +18,7 @@
 .img {
     width: 190px;
     height: 190px;
-    background-image: url(../../../assets/iconos/almohadones.png);
+    background-image: url(../../../../../assets/iconos/almohadones.png);
 }
 
 .info {
