agregar navegacion en inicio

--- a/src/app/modules/inicio/components/inicio/inicio.component.html
+++ b/src/app/modules/inicio/components/inicio/inicio.component.html
@@ -2,4 +2,12 @@
     <app-carousel></app-carousel>
     <app-beneficios></app-beneficios>
     <app-destacados></app-destacados>
+    <div class="container-opciones">
+        <div
+            class="opcion"
+            *ngFor="let opcion of navegacion"
+            (click)="cambiarOpcion(opcion)"
+            [ngClass]="{'selected': opcion == navOpcion}"
+        >{{opcion}}</div>
+    </div>
 </div>
