--- a/src/app/modules/productos/components/almohadones/almohadones.component.css
+++ b/src/app/modules/productos/components/almohadones/almohadones.component.css
@@ -11,6 +11,13 @@ h2 {
     padding: 10px;
     margin-top: 15px;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+img {
+    border-radius: 15px;
 }
 
 .categorias {
