agregar footer y ultimos ingresos

--- a/src/app/modules/inicio/components/inicio/inicio.component.html
+++ b/src/app/modules/inicio/components/inicio/inicio.component.html
@@ -10,4 +10,5 @@
             [ngClass]="{'selected': opcion == navOpcion}"
         >{{opcion}}</div>
     </div>
+    <app-ultimos></app-ultimos>
 </div>
