sacar svg de perfil en header y agregar instagram al footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="redes">
         <h3>ANBAR</h3>
-        <p>Instagram</p>
+        <a rel="noopener" href="https://www.instagram.com/anbar_deco/" target="_blank">
+            <img src="../../../assets/iconos/instagram.svg" alt="Instagram">
+        </a>
     </div>
     <div class="links">
         <p>Acerca de</p>
