agregar form de busqueda en header

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -51,7 +51,7 @@ li.selected {
     gap: 25px;
 }
 
-.iconos > img {
+img {
     transform: scale(0.7);
     cursor: pointer;
 }
@@ -71,4 +71,42 @@ li.selected {
     padding-left: 20px;
     font-weight: 500;
     font-size: 1.5rem;
+}
+
+form {
+    display: none;
+    padding: 1% 20%;
+}
+
+input {
+    padding: 10px;
+    border: none;
+    border-radius: 15px;
+    font-size: 1rem;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    margin-right: 10px;
+}
+
+input:focus {
+    outline: none;
+}
+
+form.mostrar {
+    display: flex;
+    justify-content: flex-end;
+    animation: mostrarBuscador 0.4s ease forwards;
+}
+
+@keyframes mostrarBuscador {
+    0% {
+        transform: translateX(50%);
+    }
+
+    70% {
+        transform: translateX(-1%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
