--- a/src/app/modules/admin/components/login/login.component.html
+++ b/src/app/modules/admin/components/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <h5>Login</h5>
     <form action="" (submit)="login()">
-        <input type="text" name="Username" id="username">
-        <input type="password" name="Password" id="password">
-        <button type="submit">LOGIN</button>
-        <button routerLink="">VOLVER</button>
+        <input placeholder="usuario" type="text" name="Username" id="username">
+        <input placeholder="contraseña" type="password" name="Password" id="password">
+        <button type="submit">Ingresar</button>
+        <button type="button" routerLink="">Volver</button>
     </form>
 </div>
