agregar administracion de productos y categorias al admin module con su routing

--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<div>dashboard</div>
+<div class="container">
+    <div class="aside">
+        <ul>
+            <li routerLink="admin-productos" [routerLinkActive]="'selected'">Productos</li>
+            <li routerLink="admin-categorias" [routerLinkActive]="'selected'">Categorias</li>
+        </ul>
+    </div>
+    <router-outlet></router-outlet>
+</div>
