--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -1,1 +1,17 @@
-<p>admin-productos works!</p>
+<div class="container">
+    <h2>Productos</h2>
+    <table>
+        <tr>
+            <th>Nombre</th>
+            <th>Precio</th>
+            <th>Cantidad</th>
+        </tr>
+        <tr
+            *ngFor="let producto of productos"
+        >
+            <td>{{producto.nombre}}</td>
+            <td>{{producto.precio}}</td>
+            <td>{{producto.cantidad}}</td>
+        </tr>
+    </table>
+</div>
