--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
     --bg-color: #eee;
-    --main-color: #9CAFA0;
-    --second-color: #AD8888;
-    font-family: "Maven Pro", sans-serif;
+    /* --main-color: #adc5b7; */
+    /* --second-color: #c7c1b5; */
+     --main-color: #9CAFA0;
+     --second-color: #AD8888;
+    /* font-family: "Maven Pro", sans-serif; */
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 16px;
 }
 
