--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,6 @@
 .container {
     background-color: var(--main-color);
-    height: 10%;
+    height: 7%;
     border-radius: 15px 15px 0 0;
     display: flex;
     align-items: center;
@@ -10,13 +10,15 @@
 
 .redes {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .redes h3 {
     font-size: 2rem;
+    font-weight: 200;
+    letter-spacing: 5px;
 }
 
 .redes img {
