agregar titulo y boton al aside del admin

--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
 <div class="container">
     <div class="aside">
+        <span class="title"><h3>ANBAR</h3>Panel de control</span>
         <ul>
             <li routerLink="admin-productos" [routerLinkActive]="'selected'">Productos</li>
             <li routerLink="admin-categorias" [routerLinkActive]="'selected'">Categorias</li>
         </ul>
+        <button routerLink="">Ir a la página</button>
     </div>
     <router-outlet></router-outlet>
 </div>
