--- a/src/app/modules/admin/components/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.css
@@ -7,10 +7,35 @@
     color: #fff;
     width: 20%;
     height: 100vh;
+    box-sizing: border-box;
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 50px 0;
+}
+
+.aside > .title {
+    color: #fff;
+    text-align: center;
+}
+
+.title > h3 {
+    font-size: 2rem;
+    font-weight: 200;
+    letter-spacing: 5px;
+}
+
+.aside > button {
+    cursor: pointer;
+    align-self: center;
+    font-family: "Trebuchet MS";
+    font-size: 1rem;
+    border: none;
+    background-color: var(--main-color);
+    width: 50%;
+    padding: 5px 15px;
+    border-radius: 15px;
 }
 
 ul {
