agregar hover a los li del aside

--- a/src/app/modules/admin/components/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.css
@@ -47,6 +47,10 @@ li {
     padding: 10px;
 }
 
+li:hover {
+    background-color: #b6b6b633;
+}
+
 li.selected {
     cursor: pointer;
     padding: 10px;
