agregar mas items en el aside del admin

--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -4,6 +4,9 @@
         <ul>
             <li routerLink="admin-productos" [routerLinkActive]="'selected'">Productos</li>
             <li routerLink="admin-categorias" [routerLinkActive]="'selected'">Categorias</li>
+            <li [routerLinkActive]="'selected'">Acerca de</li>
+            <li [routerLinkActive]="'selected'">Preguntas frecuentes</li>
+            <li [routerLinkActive]="'selected'">Contacto</li>
         </ul>
         <button routerLink="">Ir a la página</button>
     </div>
