--- a/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
+++ b/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
@@ -1,1 +1,18 @@
-<p>admin-categorias works!</p>
+<div class="container">
+    <h2>Categorías</h2>
+    <table>
+        <tr>
+            <th>Nombre</th>
+            <th>Botones</th>
+        </tr>  
+        <tr
+            *ngFor="let categoria of categorias"
+        >
+            <td>{{categoria.nombre}}</td>
+            <td>
+                <button>Editar</button>
+                <button>Eliminar</button>
+            </td>
+        </tr>
+    </table>
+</div>
