pasar id del producto a editar al componente y pasar los valores

--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -32,7 +32,7 @@
             <td>{{producto.descripcion}}</td>
             <td>{{producto.imagen}}</td>
             <td>
-                <button routerLink="edit-producto">Editar</button>
+                <button [routerLink]="['edit-producto', producto.idproductos]">Editar</button>
                 <button>Eliminar</button>
             </td>
         </tr>   
