--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.html
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     <h3>Producto x</h3>
-    <button routerLink="../">Cerrar</button>
+    <button routerLink="../../">Cerrar</button>
     <button>Guardar</button>
     <form action="">
-        <input type="text" placeholder="Nombre">
-        <input type="number" placeholder="Precio">
-        <input type="number" placeholder="Cantidad">
-        <select name="" id="">
+        <input type="text" placeholder="Nombre" value="{{producto?.nombre}}">
+        <input type="number" placeholder="Precio" value="{{producto?.precio}}">
+        <input type="number" placeholder="Cantidad" value="{{producto?.cantidad}}">
+        <select name="categorias" id="categorias" title="categorias">
             <option value="Muebles">Muebles</option>
             <option value="Mesa">Mesa</option>
             <option value="Almohadones">Almohadones</option>
         </select>
         <input type="text" placeholder="Descripción">
-        <input type="text" placeholder="Link de imagen">
+        <input type="text" placeholder="Link de imagen" value="{{producto?.imagen}}">
     </form>
 </div>
