agregar iconos de edit y delete en categorias

--- a/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
+++ b/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
@@ -9,9 +9,13 @@
             *ngFor="let categoria of categorias"
         >
             <td>{{categoria.nombre}}</td>
-            <td>
-                <button>Editar</button>
-                <button>Eliminar</button>
+            <td class="botones">
+                <button>
+                    <img src="../../../../../assets/iconos/edit.svg" alt="Editar">
+                </button>
+                <button>
+                    <img src="../../../../../assets/iconos/delete.svg" alt="Eliminar">
+                </button>
             </td>
         </tr>
     </table>
