--- a/src/app/modules/admin/components/admin-categorias/admin-categorias.component.css
+++ b/src/app/modules/admin/components/admin-categorias/admin-categorias.component.css
@@ -21,3 +21,20 @@ th {
     background-color: var(--main-color);
     padding: 15px 20px;
 }
+
+.botones {
+    padding: 10px;
+}
+
+.botones > button {
+    cursor: pointer;
+    padding: 3%;
+    margin: 6%;
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid #000;
+}
+
+.botones > button:hover {
+    background-color: #e6e6e6;
+}
