--- a/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
+++ b/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-    <h2>Categorías</h2>
+    <div class="title">
+        <h2>Categorías</h2>
+        <button>
+            <img src="../../../../../assets/iconos/add.svg" alt="Agregar">
+        </button>
+    </div>
     <table>
         <tr>
             <th>Nombre</th>
