--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -7,6 +7,9 @@
             <div>Muebles</div>
             <div>Mesas</div>
         </div>
+        <button>
+            <img src="../../../../../assets/iconos/add.svg" alt="Agregar">
+        </button>
     </div>
     <router-outlet></router-outlet>
     <table>
