--- a/src/app/modules/contacto/components/contacto/contacto.component.html
+++ b/src/app/modules/contacto/components/contacto/contacto.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h3>Contacto</h3>
     <div class="info">
-        <p><span class="title">Teléfono:</span> 1231231321</p>
+        <p *ngIf="nosotros?.telefono"><span class="title">Teléfono:</span> {{nosotros?.telefono}}</p>
         <p><span class="title">Mail:</span> correo@correo.com</p>
     </div>
 </div>
