agregar el nosotros al header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="titulo">
-        <h1>ANBAR</h1>
+        <h1>{{nosotros?.empresa}}</h1>
         <img src="../../../assets/iconos/sillon.svg" alt="Sillon">
     </div>
     <ul>
