--- a/src/app/modules/admin/components/admin-acerca-de/admin-acerca-de.component.css
+++ b/src/app/modules/admin/components/admin-acerca-de/admin-acerca-de.component.css
@@ -43,7 +43,7 @@ th {
 .botones > button {
     cursor: pointer;
     padding: 3%;
-    margin: 6%;
+    margin: 0 25%;
     border: none;
     background-color: transparent;
     border-bottom: 1px solid #000;
