--- a/src/app/modules/admin/components/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
             <li routerLink="admin-productos" [routerLinkActive]="'selected'">Productos</li>
             <li routerLink="admin-categorias" [routerLinkActive]="'selected'">Categorias</li>
             <li routerLink="admin-acerca-de" [routerLinkActive]="'selected'">Acerca de</li>
-            <li [routerLinkActive]="'selected'">Preguntas frecuentes</li>
+            <li routerLink="admin-faq" [routerLinkActive]="'selected'">Preguntas frecuentes</li>
             <li [routerLinkActive]="'selected'">Contacto</li>
         </ul>
         <button routerLink="">Ir a la página</button>
