--- a/src/app/modules/admin/components/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.css
@@ -1,18 +1,18 @@
 .container {
     display: flex;
+    flex-direction: column;
 }
 
 .aside {
     background-color: #000;
     color: #fff;
-    width: 20%;
-    height: 100vh;
+    width: 100%;
     box-sizing: border-box;
-    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-    padding: 50px 0;
+    padding: 0 30px;
 }
 
 .aside > .title {
@@ -33,18 +33,19 @@
     font-size: 1rem;
     border: none;
     background-color: var(--main-color);
-    width: 80%;
     padding: 5px 15px;
     border-radius: 15px;
 }
 
 ul {
     list-style: none;
+    display: flex;
 }
 
 li {
+    text-align: center;
     cursor: pointer;
-    padding: 10px;
+    padding: 20px;
 }
 
 li:hover {
@@ -53,7 +54,6 @@ li:hover {
 
 li.selected {
     cursor: pointer;
-    padding: 10px;
     background-color: var(--main-color);
     color: #000;
 }
