agregar form de add categoria y su service en funcionamiento

--- a/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
+++ b/src/app/modules/admin/components/admin-categorias/admin-categorias.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="title">
         <h2>Categorías</h2>
-        <button>
+        <button routerLink="add-categoria">
             <img src="../../../../../assets/iconos/add.svg" alt="Agregar">
         </button>
     </div>
