--- a/src/app/modules/admin/components/admin-faq/admin-faq.component.html
+++ b/src/app/modules/admin/components/admin-faq/admin-faq.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="title">
         <h2>Preguntas frecuentes</h2>
-        <button>
+        <button routerLink="add-preguntas">
             <img src="../../../../../assets/iconos/add.svg" alt="Agregar">
         </button>
     </div>
