agregar el add pregunta al admin

--- a/src/app/modules/admin/components/edit-faq/edit-faq.component.html
+++ b/src/app/modules/admin/components/edit-faq/edit-faq.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <form action="">
-        <input type="text" placeholder="Nombre">
+        <input type="text" placeholder="Pregunta">
+        <input type="text" placeholder="Respuesta">
     </form>
     <button>Guardar</button>
     <button routerLink="../../">Cerrar</button>
