--- a/src/app/modules/admin/components/edit-faq/edit-faq.component.css
+++ b/src/app/modules/admin/components/edit-faq/edit-faq.component.css
@@ -9,6 +9,12 @@ button {
 }
 
 form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form {
+    display: flex;
     padding: 20px 0;
 }
 
@@ -18,9 +24,16 @@ input {
     padding: 5px 10px;
     border-radius: 15px;
     margin-bottom: 10px;
+    margin-right: 10px;
     font-size: 1rem;
 }
 
 input:focus {
     outline: none;
+}
+
+.error {
+    color: red;
+    padding-bottom: 10px;
+    font-size: 0.8rem;
 }
