traer los valores de los input desde el ts y reeditar la navegacion luego de agregar o editar elementos

--- a/src/app/modules/admin/components/edit-acerca-de/edit-acerca-de.component.html
+++ b/src/app/modules/admin/components/edit-acerca-de/edit-acerca-de.component.html
@@ -2,33 +2,33 @@
     <form action="" [formGroup]="form" (submit)="editarNosotros($event)">
         <div class="form">
             <div class="input">
-                <input type="text" placeholder="Nombre" value="{{nosotros?.nombre}}" formControlName="nombre">
+                <input type="text" placeholder="Nombre" formControlName="nombre">
             </div>
             <div class="input">
-                <input type="text" placeholder="Apellido" value="{{nosotros?.apellido}}" formControlName="apellido">
+                <input type="text" placeholder="Apellido" formControlName="apellido">
             </div>
             <div class="input">
-                <input type="text" placeholder="Empresa" value="{{nosotros?.empresa}}" formControlName="empresa">
+                <input type="text" placeholder="Empresa" formControlName="empresa">
                 <p
                     class="error"
                     *ngIf="form.get('empresa')?.hasError('required') && form.get('empresa')?.touched"
                 >Se necesita el nombre de empresa</p>
             </div>
             <div class="input">
-                <input type="text" placeholder="Link de imagen" value="{{nosotros?.imagen}}" formControlName="imagen">
+                <input type="text" placeholder="Link de imagen" formControlName="imagen">
             </div>
             <div class="input">
-                <input type="text" placeholder="Teléfono" value="{{nosotros?.telefono}}" formControlName="telefono">
+                <input type="text" placeholder="Teléfono" formControlName="telefono">
             </div>
             <div class="input">
-                <input type="text" placeholder="Mail" value="{{nosotros?.mail}}" formControlName="mail">
+                <input type="text" placeholder="Mail" formControlName="mail">
                 <p
                     class="error"
                     *ngIf="form.get('mail')?.hasError('required') && form.get('mail')?.touched"
                 >Se necesita un mail</p>
             </div>
             <div class="input">
-                <textarea type="text" placeholder="Información" value="{{nosotros?.informacion}}" formControlName="informacion"></textarea>
+                <textarea type="text" placeholder="Información" formControlName="informacion"></textarea>
                 <p
                     class="error"
                     *ngIf="form.get('informacion')?.hasError('required') && form.get('informacion')?.touched"
