--- a/src/app/modules/admin/components/edit-categorias/edit-categorias.component.html
+++ b/src/app/modules/admin/components/edit-categorias/edit-categorias.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form action="" [formGroup]="form">
-        <input type="text" placeholder="Nombre" value="{{categoria?.nombre}}" formControlName="nombre">
+        <input type="text" placeholder="Nombre" formControlName="nombre">
     </form>
     <button>Guardar</button>
     <button routerLink="../../">Cerrar</button>
