--- a/src/app/modules/admin/components/edit-productos/edit-productos.component.html
+++ b/src/app/modules/admin/components/edit-productos/edit-productos.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <form action="" [formGroup]="form">
-        <input type="text" placeholder="Nombre" value="{{producto?.nombre}}" formControlName="nombre">
-        <input type="number" placeholder="Precio" value="{{producto?.precio}}" formControlName="precio">
-        <input type="number" placeholder="Cantidad" value="{{producto?.cantidad}}" formControlName="cantidad">
+        <input type="text" placeholder="Nombre" formControlName="nombre">
+        <input type="number" placeholder="Precio" formControlName="precio">
+        <input type="number" placeholder="Cantidad" formControlName="cantidad">
         <select name="categorias" id="categorias" title="categorias">
             <option value="Muebles">Muebles</option>
             <option value="Mesa">Mesa</option>
             <option value="Almohadones">Almohadones</option>
         </select>
-        <input type="text" placeholder="Link de imagen" value="{{producto?.imagen}}" formControlName="imagen">
+        <input type="text" placeholder="Link de imagen" formControlName="imagen">
         <input type="text" placeholder="Descripción" formControlName="descripcion">
     </form>
     <button>Guardar</button>
