agregar componente de add productos

--- a/src/app/modules/admin/components/admin-productos/admin-productos.component.html
+++ b/src/app/modules/admin/components/admin-productos/admin-productos.component.html
@@ -7,7 +7,7 @@
             <div>Muebles</div>
             <div>Mesas</div>
         </div>
-        <button>
+        <button routerLink="add-producto">
             <img src="../../../../../assets/iconos/add.svg" alt="Agregar">
         </button>
     </div>
